--- a/.env.example
+++ b/.env.example
@@ -31,10 +31,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=malek25ayed@gmail.com
-MAIL_PASSWORD="gyxjhgzliaphhipy"
+MAIL_USERNAME=rihemothmani@gmail.com
+MAIL_PASSWORD="xtdg frlc snxt yocp"
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=malek25ayed@gmail.com
+MAIL_FROM_ADDRESS=rihemothmani@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 
